2009-12-10  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* whitespace.el (whitespace-display-char-on): Asure
	`buffer-display-table' is unique when two or more windows are
	visible.  Reported by Martin Pohlack <mp26@os.inf.tu-dresden.de>.
	New version 12.1.

2009-12-10  Eli Zaretskii  <eliz@gnu.org>

	* arc-mode.el (archive-rar-summarize): Allow between 6 and 7
	characters in the Attribute field.

2009-12-10  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-svn.el (vc-svn-after-dir-status): Fix regexp.  (Bug#4741)

2009-12-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	Let loaddefs.el adjust to changes in autoload-excludes (bug#5162).
	* emacs-lisp/autoload.el (autoload-generate-file-autoloads):
	Disregard autoload-excludes.
	(update-directory-autoloads): Obey autoload-excludes here instead.
	But don't store its contents in no-autoloads and remove entries that
	refer to excludes files.

2009-12-10  Glenn Morris  <rgm@gnu.org>

	* mail/feedmail.el (top-level): Move require 'mail-utils to start.
	(expand-mail-aliases): Define for compiler.

	* vc-annotate.el (log-view-vc-backend, log-view-vc-fileset):
	Define for compiler.

	* mail/emacsbug.el (report-emacs-bug): Use whichever send command is
	appropriate for the mail-user-agent in use.

2009-12-09  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-handle-insert-directory): Suppress error messages.

2009-12-09  Dan Nicolaescu  <dann@ics.uci.edu>

	Fix short log parsing and fontification.
	* vc-bzr.el (vc-bzr-log-view-mode): Match dot in revision number.
	Fix fontification for the [merge] label.

2009-12-09  Vivek Dasmohapatra  <vivek@etla.org>

	Drop some properties to avoid surprises.
	* htmlfontify.el (hfy-ignored-properties): New defcustom.
	(hfy-fontify-buffer): Use it.

2009-12-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	Minor cleanup.
	* ffap.el (ffap-symbol-value): Replace ffap-soft-value.
	Adjust all callers.
	(ffap-locate-file): Remove unused arg `dir-ok' and make other